attempt to fix css z-index issues... doesn't really work though

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,7 +122,7 @@ html, body {
   overflow-x: scroll;
   position: relative;
   background: linear-gradient(rgba(68, 76, 84, 0.6), rgba(68, 76, 84, 0.6)), url("../img/diagonalTexture.png");
-  z-index: 1; }
+  z-index: 5; }
 
 .topBar {
   /* Monster Gradient: */
@@ -250,7 +250,9 @@ html, body {
     border-bottom: 2px solid #252E35;
     display: flex;
     height: 200px;
-    width: 100%; }
+    width: 100%;
+    z-index: 0;
+    position: relative; }
 
 .upperArea .paletteSelect {
   background: #444C54;
